--- a/client/src/App.css
+++ b/client/src/App.css
@@ -436,6 +436,35 @@ textarea {
 small a {
     font-weight: 600;
 }
+/* .filter-input:focus {
+  border: none !important;
+  outline: none !important;
+}
+.filter-input {
+  outline: none;
+  border: none !important;
+  display: inline-block;
+  height: 100%;
+  margin-top: 30px;
+}
+
+.filter-contacts {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid #ccc;
+  height: 40px;
+  margin: 20px 0px;
+  padding: 10px 5px;
+  border-radius: 8px;
+}
+
+.filter-contacts i {
+  color: #777777;
+  padding: 4px 10px 4px 4px;
+  border-right: 1px solid #ccc;
+} */
 
 /* Mobile Styles */
 @media (max-width: 700px) {
