--- a/client/src/App.css
+++ b/client/src/App.css
@@ -205,6 +205,7 @@ img {
 .btn-block {
     display: block;
     width: 100%;
+    margin-top: 30px;
 }
 
 .btn-sm {
@@ -431,6 +432,29 @@ textarea {
 .btn-rounded {
     border-radius: 5px;
     box-shadow: 1px 3px rgba(0, 0, 0, 0.1);
+}
+
+.login-btn {
+    margin-top: 60px;
+}
+
+.contact-item-btns .btn i {
+    padding: 1px 5px 1px 6px;
+    margin-left: 5px;
+}
+
+.contact-item-btns button {
+    border-radius: 5px;
+    font-size: 0.9rem;
+    padding: 0.3rem 0.3rem 0.3rem 0.8rem;
+}
+
+.contact-item-btns .btn-danger {
+    margin-left: 5px;
+}
+
+.contact-item {
+    border-radius: 4px;
 }
 
 small a {
